--- a/vercel.json
+++ b/vercel.json
@@ -2,29 +2,14 @@
   "version": 2,
   "builds": [
     {
-      "src": "client/package.json",
-      "use": "@vercel/static-build",
-      "config": {
-        "distDir": "build"
-      }
-    },
-    {
       "src": "server/wsgi.py",
       "use": "@vercel/python"
     }
   ],
-    "routes": [
-    {
-      "src": "/api/(.*)",
-      "dest": "/server/$1"
-    },
-    {
-      "src": "/static/(.*)",
-      "dest": "/client/build/static/$1"
-    },
+  "routes": [
     {
       "src": "/(.*)",
-      "dest": "/client/build/$1"
+      "dest": "/server/wsgi.py"
     }
   ]
 }
